feat(selection): assign PDF crops to template slots